--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,8 +3,8 @@ name: merge
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
 
 jobs:
   test:
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
-        go-version: '1.14'
+        go-version: '1.15'
       id: go
 
     - name: checkout code
@@ -26,9 +26,11 @@ jobs:
 
     - name: install libpcap
       run: |
-       sudo apt-get update && \
-          sudo apt-get install -y --no-install-recommends \
-          libpcap-dev
+       apt-get update && \
+         apt-get install -y --no-install-recommends \
+         gcc \
+         libpcap-dev \
+         make
 
     - name: run tests
       run: |
