--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,7 @@ jobs:
         name: Set up QEMU
         uses: docker/setup-qemu-action@v1
         with:
-          platforms:
-          - arm64,amd64,arm/v7
+          platforms: linux/arm64,linux/amd64,linux/arm/v7
       -
         name: Set up Docker Buildx
         id: buildx
