--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -59,3 +59,6 @@ jobs:
         name: Inspect image
         run: |
           docker buildx imagetools inspect ghcr.io/rename-this/vhs:latest
+      - name: Setup tmate session
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
