--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -38,27 +38,28 @@ jobs:
             --cache-to "type=local,dest=/tmp/.buildx-cache" \
             --platform linux/amd64,linux/arm/v7,linux/arm64 \
             --output "type=image,push=false" \
-            --tag ghcr.io/rename-this/vhs:latest \
+            --tag ghcr.io/bradbeam/vhs:latest \
             --file ./docker/vhs/Dockerfile ./
-      #-
-      #  name: Login to DockerHub
-      #  uses: docker/login-action@v1
-      #  with:
-      #    username: ${{ secrets.DOCKER_USERNAME }}
-      #    password: ${{ secrets.DOCKER_PASSWORD }}
-      #-
-      #  name: Docker Buildx (push)
-      #  run: |
-      #    docker buildx build \
-      #      --cache-from "type=local,src=/tmp/.buildx-cache" \
-      #      --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
-      #      --output "type=image,push=true" \
-      #      --tag crazymax/diun:latest \
-      #      --file ./Dockerfile-diun ./
       -
-        name: Inspect image
+        name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Docker Buildx (push)
         run: |
-          docker buildx imagetools inspect ghcr.io/rename-this/vhs:latest
-      - name: Setup tmate session
-        if: failure()
-        uses: mxschmitt/action-tmate@v3
+          docker buildx build \
+            --cache-from "type=local,src=/tmp/.buildx-cache" \
+            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
+            --output "type=image,push=true" \
+            --tag ghcr.io/bradbeam/vhs:latest \
+            --file ./Dockerfile-diun ./
+      #-
+      #  name: Inspect image
+      #  run: |
+      #    docker buildx imagetools inspect ghcr.io/rename-this/vhs:latest
+      #- name: Setup tmate session
+      #  if: failure()
+      #  uses: mxschmitt/action-tmate@v3
