--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -55,7 +55,7 @@ jobs:
             --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
             --output "type=image,push=true" \
             --tag ghcr.io/bradbeam/vhs:latest \
-            --file ./Dockerfile-diun ./
+            --file ./docker/vhs/Dockerfile ./
       #-
       #  name: Inspect image
       #  run: |
