--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           docker buildx build \
             --cache-from "type=local,src=/tmp/.buildx-cache" \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
+            --platform linux/amd64,linux/arm/v7,linux/arm64 \
             --output "type=image,push=true" \
             --tag ghcr.io/bradbeam/vhs:latest \
             --file ./docker/vhs/Dockerfile ./
@@ -60,6 +60,6 @@ jobs:
       #  name: Inspect image
       #  run: |
       #    docker buildx imagetools inspect ghcr.io/rename-this/vhs:latest
-      #- name: Setup tmate session
-      #  if: failure()
-      #  uses: mxschmitt/action-tmate@v3
+      - name: Setup tmate session
+        if: failure()
+        uses: mxschmitt/action-tmate@v3
