chore: Add environment variables
Signed-off-by: Brad Beam <brad.beam@b-rad.info>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   test:
+    env:
+      IMAGE: "ghcr.io/${{ github.repository_owner }}/${{ github.repository_name }}"
     name: test
     runs-on: ubuntu-latest
     steps:
