fix: Fix type in docker target
Signed-off-by: Brad Beam <brad.beam@b-rad.info>

--- a/docker/vhs/Dockerfile
+++ b/docker/vhs/Dockerfile
@@ -30,7 +30,7 @@ ENTRYPOINT ["/vhs"]
 
 ########################################################
 
-FROM builer as test
+FROM builder as test
 
 RUN go test -v ./...
 
