chore: Use makefile for testing
Signed-off-by: Brad Beam <brad.beam@b-rad.info>

--- a/docker/vhs/Dockerfile
+++ b/docker/vhs/Dockerfile
@@ -33,5 +33,5 @@ ENTRYPOINT ["/vhs"]
 
 FROM builder as test
 
-RUN go test -cover -race -coverprofile coverage.out `go list ./... | grep -v /cmd/vhs`
+RUN make test
 
