--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,12 +4,15 @@ on:
   push:
     branches:
     - main
+  pull_request:
+    branches:
+    - main
 
 jobs:
   build:
     env:
       IMAGE: "ghcr.io/${{ github.repository }}"
-      PLATFORMS: "linux/arm64,linux/amd64,linux/arm/v7"
+      PLATFORMS: "linux/amd64"
     name: build
     runs-on: ubuntu-latest
     steps:
@@ -45,50 +48,50 @@ jobs:
           --output "type=image,push=false" \
           --tag ${IMAGE}:${{ github.sha }} \
           --file ./docker/vhs/Dockerfile ./
-    -
-      name: Login to ghcr.io
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: vcr-bot
-        password: ${{ secrets.GHCR_TOKEN }}
-    -
-      name: Push
-      run: |
-        # push image:sha
-        docker buildx build \
-          --cache-from "type=local,src=/tmp/.buildx-cache" \
-          --platform ${PLATFORMS} \
-          --target application \
-          --output "type=image,push=true" \
-          --tag ${IMAGE}:${{ github.sha }} \
-          --file ./docker/vhs/Dockerfile ./
-
-        # push image:edge ( moving tag )
-        docker buildx build \
-          --cache-from "type=local,src=/tmp/.buildx-cache" \
-          --platform ${PLATFORMS} \
-          --target application \
-          --output "type=image,push=true" \
-          --tag ${IMAGE}:edge \
-          --file ./docker/vhs/Dockerfile ./
-
-  docs:
-    name: docs
-    runs-on: ubuntu-latest
-    steps:
-    -
-      name: Checkout
-      uses: actions/checkout@v2
-      with:
-        submodules: true
-    -
-      name: Set up environment
-      run: |
-        make init
-    -
-      name: Publish Site
-      uses: chabad360/hugo-gh-pages@master
-      with:
-        githubToken: ${{ secrets.GITHUB_TOKEN }}
-        siteDir: /github/workspace/site
+#    -
+#      name: Login to ghcr.io
+#      uses: docker/login-action@v1
+#      with:
+#        registry: ghcr.io
+#        username: vcr-bot
+#        password: ${{ secrets.GHCR_TOKEN }}
+#    -
+#      name: Push
+#      run: |
+#        # push image:sha
+#        docker buildx build \
+#          --cache-from "type=local,src=/tmp/.buildx-cache" \
+#          --platform ${PLATFORMS} \
+#          --target application \
+#          --output "type=image,push=true" \
+#          --tag ${IMAGE}:${{ github.sha }} \
+#          --file ./docker/vhs/Dockerfile ./
+#
+#        # push image:edge ( moving tag )
+#        docker buildx build \
+#          --cache-from "type=local,src=/tmp/.buildx-cache" \
+#          --platform ${PLATFORMS} \
+#          --target application \
+#          --output "type=image,push=true" \
+#          --tag ${IMAGE}:edge \
+#          --file ./docker/vhs/Dockerfile ./
+#
+#  docs:
+#    name: docs
+#    runs-on: ubuntu-latest
+#    steps:
+#    -
+#      name: Checkout
+#      uses: actions/checkout@v2
+#      with:
+#        submodules: true
+#    -
+#      name: Set up environment
+#      run: |
+#        make init
+#    -
+#      name: Publish Site
+#      uses: chabad360/hugo-gh-pages@master
+#      with:
+#        githubToken: ${{ secrets.GITHUB_TOKEN }}
+#        siteDir: /github/workspace/site
