--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,18 +1,18 @@
-name: pull request
-
-on:
-  pull_request:
-    branches:
-    - main
-
-jobs:
-  test:
-    name: test
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: checkout
-      uses: actions/checkout@v2
-
-    - name: test
-      run: make test
+#name: pull request
+#
+#on:
+#  pull_request:
+#    branches:
+#    - main
+#
+#jobs:
+#  test:
+#    name: test
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#    - name: checkout
+#      uses: actions/checkout@v2
+#
+#    - name: test
+#      run: make test
